Improved smooth armor equip and removal animations